<resources>
    <string name="app_name">Vamdeh</string>
    <string name="submit">تایید</string>
    <string name="phone_number">شماره همراه</string>
    <string name="installment_page">صفحه اقساط</string>
    <string name="certified">اعتماد دارم</string>
    <string name="trusted">معتمدها</string>
    <string name="apply_loan">دریافت وام</string>
    <string name="lend_loan">ارائه وام</string>

    <string name="action_overflow_menu">overflow menu</string>
    <string name="lending">ارائه وام</string>
    <string name="loanAmountLabel">میزان وام</string>
    <string name="paymentTime">مدت پرداخت</string>
    <string name="loanRequest">درخواست وام</string>
    <string name="directLoan">وام مستقیم</string>
    <string name="monthlyPayment">میزان قسط ماهیانه</string>
    <string name="paymentAmount">۸۰ تومان</string>
    <string name="paymentDescription">توضیحات</string>
    <string name="loanAmount">%s تومان</string>

    <string name="nameHint">نام و نام خانوادگی</string>
    <string name="phoneNumberHint">شماره تماس</string>
    <string name="creditNumberHint">شماره حساب</string>
    <string name="emailHint">ایمیل</string>
    <string name="addressHint">آدرس</string>
    <string name="cancel">انصراف</string>
    <string name="currentPayment">قسط های جاری</string>
    <string name="paidPayment">قسط های گذشته</string>
    <string name="paymentDateLabel">زمان قسط</string>
    <string name="pay">پرداخت</string>
    <string name="paid">تصویه شد</string>
    <string name="sweat_heart_rate">امتیاز خوش حسابی</string>
    <string name="total_rate">امتیاز کل</string>
    <string name="loan_rate">امتیاز ارایه وام</string>
    <string name="zero">0</string>
    <string name="password">رمز عبور</string>
    <string name="again_password">رمز عبور مجدد</string>
    <string name="login_page_title">فعالسازی اکانت شما با موفقیت انجام شد \n  رمز عبوری برای ورود به اکانت خود انتخاب کنید</string>
    <string name="add_certified_person">افزودن فرد</string>
    <string name="trustier_title">درخواست اعتماد</string>
    <string name="trustier_message">آیا با درخواست اعتماد برای فرد انتخاب شده موافقید؟</string>
    <string name="add_certified_person_description">تا چه میزان به صورت ماهانه ایشان را ضمانت میکنید؟</string>
    <string name="phone_number_error">شماره تلفن وارد شده صحیح نیست</string>
    <string name="error">خطا</string>
    <string name="successful">موفق</string>

    <string name="no">خیر</string>
    <string name="yes">بله</string>
    <string name="register_error">ثبت رمزعبور امکانپذیر نیست لطفا دوباره ثبتنام کنید</string>
    <string name="login_error">خطایی در ورود به برنامه رخ داده است</string>
    <string name="toman_format">%d تومان</string>
    <string name="create_loan_request_success">درخواست وام شما ثبت شد</string>
    <string name="trust_successful">درخواست اعتماد شما ثبت شد</string>
    <string name="national_code">کد ملی</string>
    <string name="card_no">شماره کارت</string>
    <string name="sheba_no">شماره شبا</string>
</resources>
