<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="ir.sharif.vamdeh.activity.before_main.PhoneActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:padding="18dp"
        android:layout_above="@id/password1"
        android:gravity="center"
        android:text="@string/login_page_title"/>


    <EditText
        android:id="@+id/password1"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:layout_above="@id/password2"
        android:maxLength="13"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_above="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/again_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:maxLength="13"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ir.sharif.vamdeh.view.button.UnoSumbitButton
        android:id="@+id/register"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp" />

</RelativeLayout>
