<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".activity.ProfileActivity">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:paddingBottom="12dp"
        android:background="@color/header"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/actionBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_back"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="پروفایل"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/menuImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_menu"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/actionBarLayout"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="12dp"
            android:contentDescription="profileImageView"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/plusImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@id/profileImageView"
            android:layout_alignEnd="@id/profileImageView"
            android:layout_alignRight="@id/profileImageView"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/add_background"
            android:contentDescription="plusImageView"
            android:src="@mipmap/ic_add"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <TextView
        android:id="@+id/nameHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/fullName"
        android:layout_alignRight="@id/fullName"
        android:layout_alignTop="@id/fullName"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-8dp"
        android:text="@string/nameHint"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_background"
        android:ellipsize="end"
        android:hint="@string/nameHint"
        android:inputType="text"
        android:lines="1"
        android:minHeight="48dp"
        android:paddingEnd="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingStart="20dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/phoneNumberHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/nationalCode"
        android:layout_alignRight="@id/nationalCode"
        android:layout_alignTop="@id/nationalCode"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-8dp"
        android:text="@string/national_code"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/nationalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullName"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ellipsize="start"
        android:hint="@string/national_code"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:gravity="center_vertical|right"
        android:minHeight="48dp"
        android:paddingEnd="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingStart="20dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/creditNumberHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/accountNo"
        android:layout_alignRight="@id/accountNo"
        android:layout_alignTop="@id/accountNo"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-8dp"
        android:text="@string/creditNumberHint"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/accountNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nationalCode"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ellipsize="end"
        android:hint="@string/creditNumberHint"
        android:inputType="number"
        android:lines="1"
        android:minHeight="48dp"
        android:paddingEnd="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingStart="20dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />


    <TextView
        android:id="@+id/emailHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cardNo"
        android:layout_alignRight="@id/cardNo"
        android:layout_alignTop="@id/cardNo"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-8dp"
        android:text="@string/card_no"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/cardNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountNo"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ellipsize="end"
        android:hint="@string/card_no"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:minHeight="48dp"
        android:paddingEnd="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingStart="20dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/addressHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/shebaNo"
        android:layout_alignRight="@id/shebaNo"
        android:layout_alignTop="@id/shebaNo"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-8dp"
        android:text="@string/sheba_no"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/shebaNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardNo"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/sheba_no"
        android:inputType="textPostalAddress|textMultiLine"
        android:lines="1"
        android:minHeight="48dp"
        android:paddingEnd="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_below="@id/shebaNo">

        <ir.sharif.vamdeh.view.button.UnoButton
            android:id="@+id/profileCancelButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginRight="12dp"
            android:text="@string/cancel" />

        <ir.sharif.vamdeh.view.button.UnoSumbitButton
            android:id="@+id/profileSubmitButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:text="@string/submit" />


    </LinearLayout>



</RelativeLayout>