<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".activity.operations.LoanRequestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/actionBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/backImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_back"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/loanRequest"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/menuImageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_menu"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <include
            android:id="@+id/amountSlider"
            layout="@layout/amount_slider_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/actionBarLayout"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp" />

        <RelativeLayout
            android:id="@+id/paymentTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amountSlider"
            android:layout_margin="24dp"
            android:background="@drawable/slider_bg"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/paymentTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/paymentTime"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/paymentButtonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/paymentTimeTextView"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/_12monthsPaymentButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/button_bg"
                    android:text="۱۲ ماه"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/_6monthsPaymentButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_bg"
                    android:text="۶ ماه"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/_3monthsPaymentButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_bg"
                    android:text="۳ ماه"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/otherPaymentButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button_bg"
                    android:text="سایر"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle,HardcodedText" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/monthlyPaymentAmountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/paymentTimeLayout"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/slider_bg"
            android:padding="12dp">

            <TextView
                android:id="@+id/monthlyPaymentLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/monthlyPayment"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/monthlyPaymentAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/paymentAmount"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/monthlyPaymentAmountLayout"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:hint="@string/paymentDescription"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:theme="@style/Theme.App.Base" />

        <ir.sharif.vamdeh.view.button.UnoButton
            android:id="@+id/requestLoanButton"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/descriptionEditText"
            android:layout_centerHorizontal="true"
            android:text="@string/loanRequest" />

    </RelativeLayout>
</ScrollView>
